--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tokens:clean": "npx rimraf **/00-tokens/",
     "tokens:component": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias node ./context/design-tokens/build-component.js",
     "tokens:literal": "node ./context/design-tokens/build-literal.js",
+    "tokens:global-components": "node ./context/design-tokens/build-component-default.js",
     "validate": "sn-package-validate",
     "validate:global": "sn-package-validate -t global",
     "validate:nature": "sn-package-validate -t nature",
