--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test:ci": "jest --passWithNoTests --runInBand",
     "tokens:alias": "npm run tokens:clean && npm run tokens:literal && node ./context/design-tokens/build-alias.js",
     "tokens:clean": "npx rimraf **/00-tokens/",
-    "tokens:component": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias node ./context/design-tokens/build-component.js",
+    "tokens:components": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias && node ./context/design-tokens/build-component-default.js && node ./context/design-tokens/build-component-springer.js && node ./context/design-tokens/build-component-springer-nature.js && node ./context/design-tokens/build-component-nature.js",
     "tokens:literal": "node ./context/design-tokens/build-literal.js",
     "tokens:global-components": "node ./context/design-tokens/build-component-default.js",
     "validate": "sn-package-validate",
