--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "test:ci": "jest --passWithNoTests --runInBand",
     "tokens:alias": "npm run tokens:clean && npm run tokens:literal && node ./context/design-tokens/build-alias.js",
     "tokens:clean": "npx rimraf **/00-tokens/",
-    "tokens:components": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias && node ./context/design-tokens/build-component-default.js && node ./context/design-tokens/build-component-springer.js && node ./context/design-tokens/build-component-springer-nature.js && node ./context/design-tokens/build-component-nature.js",
+    "tokens:components": "npm run tokens:global-components && npm run tokens:brand-components",
     "tokens:literal": "node ./context/design-tokens/build-literal.js",
-    "tokens:global-components": "node ./context/design-tokens/build-component-default.js",
+    "tokens:global-components": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias && node ./context/design-tokens/build-component-default.js && node ./context/design-tokens/build-component-springer.js && node ./context/design-tokens/build-component-springer-nature.js && node ./context/design-tokens/build-component-nature.js",
+    "tokens:brand-components": "node ./context/design-tokens/build-component.js",
     "validate": "sn-package-validate",
     "validate:global": "sn-package-validate -t global",
     "validate:nature": "sn-package-validate -t nature",
