--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tokens:clean": "npx rimraf **/00-tokens/",
     "tokens:component": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias node ./context/design-tokens/build-component.js",
     "tokens:literal": "node ./context/design-tokens/build-literal.js",
+    "tokens:figma": "node ./context/design-tokens/build-figma-tokens.js",
     "validate": "sn-package-validate",
     "validate:global": "sn-package-validate -t global",
     "validate:nature": "sn-package-validate -t nature",
@@ -89,5 +90,8 @@
       "/node_modules/(?!(@springernature/global-context))/"
     ]
   },
-  "sasslintConfig": "./node_modules/@springernature/sasslint-config/config/.sass-lint.yml"
+  "sasslintConfig": "./node_modules/@springernature/sasslint-config/config/.sass-lint.yml",
+  "dependencies": {
+    "@divriots/style-dictionary-to-figma": "^0.2.0"
+  }
 }
