--- a/package.json
+++ b/package.json
@@ -91,6 +91,5 @@
       "/node_modules/(?!(@springernature/global-context))/"
     ]
   },
-  "sasslintConfig": "./node_modules/@springernature/sasslint-config/config/.sass-lint.yml",
-  "dependencies": {}
+  "sasslintConfig": "./node_modules/@springernature/sasslint-config/config/.sass-lint.yml"
 }
