--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "tokens:clean": "npx rimraf **/00-tokens/",
     "tokens:components": "npm run tokens:global-components && npm run tokens:brand-components",
     "tokens:literal": "node ./context/design-tokens/build-literal.js",
-    "tokens:global-components": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias && node ./context/design-tokens/build-component-default.js && node ./context/design-tokens/build-component-springer.js && node ./context/design-tokens/build-component-springer-nature.js && node ./context/design-tokens/build-component-nature.js",
+    "tokens:global-components": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias && node ./context/design-tokens/build-component-global.js",
     "tokens:brand-components": "node ./context/design-tokens/build-component.js",
+    "tokens:default": "node ./context/design-tokens/build-component-default.js",
     "validate": "sn-package-validate",
     "validate:global": "sn-package-validate -t global",
     "validate:nature": "sn-package-validate -t nature",
