--- a/toolkits/global/packages/global-forms/package.json
+++ b/toolkits/global/packages/global-forms/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@springernature/global-forms",
-	"version": "5.0.0",
+	"version": "5.0.0-rc.1",
 	"license": "MIT",
 	"description": "form component",
 	"keywords": [
