update sass-lint config to allow for long form hex codes

--- a/package.json
+++ b/package.json
@@ -91,5 +91,5 @@
       "/node_modules/(?!(@springernature/global-context))/"
     ]
   },
-  "sasslintConfig": "./node_modules/@springernature/sasslint-config/config/.sass-lint.yml"
+  "sasslintConfig": "./.sass-lint.yml"
 }
