--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "tokens:components": "npm run tokens:global-components && npm run tokens:brand-components",
     "tokens:literal": "node ./context/design-tokens/build-literal.js",
     "tokens:global-components": "npm run tokens:clean && npm run tokens:literal && npm run tokens:alias && node ./context/design-tokens/build-component-global.js",
-    "tokens:brand-components": "node ./context/design-tokens/build-component.js",
+    "tokens:brand-components": "node ./context/design-tokens/build-components.js",
+    "tokens:component:<component>": "node ./context/design-tokens/build-component.js --component <component>",
     "validate": "sn-package-validate",
     "validate:global": "sn-package-validate -t global",
     "validate:nature": "sn-package-validate -t nature",
