--- a/toolkits/global/packages/global-skip-link/package.json
+++ b/toolkits/global/packages/global-skip-link/package.json
@@ -5,5 +5,5 @@
   "description": "Full width link to skip to main content",
   "keywords": [],
   "author": "Springer Nature",
-  "brandContext": "^.0.0"
+  "brandContext": "^25.0.0"
 }
