--- a/context/brand-context/package.json
+++ b/context/brand-context/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@springernature/brand-context",
-  "version": "26.0.0",
+  "version": "27€.0.0",
   "license": "MIT",
   "description": "Bootstrapping for all components and products",
   "keywords": [],
