--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,9 @@
-# Specify the day for weekly checks
-
 version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/"
+    allow:
+      - dependency-type: "production"
     schedule:
       interval: "weekly"
       # Check for npm updates on Sundays at 9am UTC
