--- a/context/design-tokens/package.json
+++ b/context/design-tokens/package.json
@@ -13,6 +13,7 @@
     "tokens:clean-components": "npx rimraf ../../**/toolkits/**/00-tokens/",
     "tokens:literal": "node build-literal.js",
     "tokens:alias": "node build-alias.js",
+    "tokens:docs": "node build-docs.js",
     "tokens:delete-index": "npx rimraf ../../context/brand-context/**/00-tokens/_index.scss",
     "tokens:build-index": "npm run tokens:delete-index && node build-index.js",
     "tokens:components": "npm run tokens:global-components && npm run tokens:brand-components",
