--- a/toolkits/springernature/packages/springernature-modal/package.json
+++ b/toolkits/springernature/packages/springernature-modal/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@springernature/springernature-modal",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "license": "MIT",
   "description": "Springer Nature branded modal pop-up window",
+  "main": "./js/modal.js",
   "keywords": [
     "modal",
     "pop-up"
