--- a/context/design-tokens/package.json
+++ b/context/design-tokens/package.json
@@ -19,7 +19,8 @@
     "tokens:components": "npm run tokens:global-components && npm run tokens:brand-components",
     "tokens:global-components": "node build-component-global.js",
     "tokens:brand-components": "node build-components.js",
-    "tokens:component": "node build-component.js -- component context"
+    "tokens:component": "node build-component.js -- component context",
+    "tokens:figma": "node build-figma.js"
   },
   "keywords": [
     "design",
@@ -32,6 +33,7 @@
   "author": "Stuart Robson",
   "license": "MIT",
   "devDependencies": {
+    "@divriots/style-dictionary-to-figma": "^0.2.0",
     "style-dictionary": "^3.7.1"
   }
 }
