update ignore for dist files

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,10 @@ typings
 toolkits/**/packages/**/package-lock.json
 context/**/package-lock.json
 
+# package and context distribution files
+context/**/dist
+toolkits/**/demo/dist/
+
 # IDE
 /.idea/
 .vscode/
