increase all components brand-context version to 31.0.1

--- a/toolkits/springernature/packages/springernature-user-details/package.json
+++ b/toolkits/springernature/packages/springernature-user-details/package.json
@@ -5,5 +5,5 @@
   "description": "Springer Nature branded logged-in user details component",
   "keywords": [],
   "author": "Springer Nature",
-  "brandContext": " v20.1.1"
+  "brandContext": "^31.0.1"
 }
