--- a/toolkits/global/packages/global-customer-satisfaction-input/package.json
+++ b/toolkits/global/packages/global-customer-satisfaction-input/package.json
@@ -1,12 +1,9 @@
 {
   "name": "@springernature/global-customer-satisfaction-input",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "license": "MIT",
   "description": "HTML form based component for gathering customer satisfaction data",
   "keywords": [],
   "author": "Springer Nature",
-  "brandContext": "^29.0.3",
-  "dependencies": {
-    "@springernature/global-forms": "^5.0.0"
-  }
+  "brandContext": "^32.0.0"
 }
