--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-18.04
+          - ubuntu-latest
         node-version:
           - 14.x
     steps:
@@ -42,7 +42,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-18.04
+          - ubuntu-latest
         node-version:
           - 14.x
     # if: ${{ github.event_name != 'pull_request' }}
