--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: tj-actions/changed-files@v39
+        with:
           since_last_remote_commit: true
+      - run: 'npm ci'
       - run: 'echo ${{ steps.changed-files.outputs.all_changed_files }}'
       - run: 'npm run bootstrap && npm run build:ci'
   publish:
