--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,12 +38,12 @@ jobs:
           fetch-depth: 0
       - name: Get changed files
         id: changes
-        # Set outputs using the command.
-        run: echo "$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)" >> $CHANGED_FILES
+        run: |
+          echo "CHANGED_FILES=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)" >> $GITHUB_OUTPUT
         # run: |
         #   echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
       - name: Run build (test, validate)
-        run: echo $CHANGED_FILES
+        run: echo ${{ steps.version.outputs.CHANGED_FILES }}
         # run: 'npm ci'
         # run: 'npm run bootstrap && npm run build:ci'
   publish:
