--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,16 +36,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-        env:
-          COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
-          CHANGED_FILES: $(git diff --name-only $COMMIT_RANGE)
         # run: |
         #   echo "CHANGED_FILES=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)" >> $GITHUB_ENV
         # run: |
         #   echo "::set-output name=all::$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | xargs)"
       - name: Run build (test, validate)
-        # run: echo "${{ env }}"
-        run: env
+        env:
+          COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
+          CHANGED_FILES: $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
+        run: echo $CHANGED_FILES
         # run: 'npm ci'
         # run: 'npm run bootstrap && npm run build:ci'
   publish:
