--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,14 +32,14 @@ jobs:
           path: ~/.npm
           key: v1-npm-deps-${{ hashFiles('**/package-lock.json') }}
           restore-keys: v1-npm-deps-
-      # - name: Checkout repository get changed files
-      - name: Run build (test, validate)
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
         env:
           COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
           # CHANGED_FILES: $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
+      - name: Run build (test, validate)
         run: |
           echo "CHANGED_FILES=$(git diff --name-only $COMMIT_RANGE)" >> $GITHUB_ENV
           echo $CHANGED_FILES
