--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,18 +32,21 @@ jobs:
           path: ~/.npm
           key: v1-npm-deps-${{ hashFiles('**/package-lock.json') }}
           restore-keys: v1-npm-deps-
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # - name: Checkout repository
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
         env:
           COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
           # CHANGED_FILES: $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
-      - name: Run build (test, validate)
+      - name: Get changeset
         run: |
           echo "CHANGED_FILES=$(git diff --name-only $COMMIT_RANGE)" >> $GITHUB_ENV
-          echo $CHANGED_FILES
-          echo env
+      - name: Test1
+          run: echo $CHANGED_FILES
+      - name: Test2
+          run: echo env
+      # - name: Run build (test, validate)
         # run: 'npm ci'
         # run: 'npm run bootstrap && npm run build:ci'
   publish:
