--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,10 +41,13 @@ jobs:
           # CHANGED_FILES: $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
       - name: Get changeset
         run: |
-          echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})" >> $GITHUB_ENV
+          echo "CHANGED_FILES=$(git diff --name-only $COMMIT_RANGE)" >> $GITHUB_ENV
+          echo "CHANGED_FILES2=$(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})" >> $GITHUB_ENV
       - name: Test1
         run: echo $CHANGED_FILES
       - name: Test2
+        run: echo $CHANGED_FILES2
+      - name: Test3
         run: env
       # - name: Run build (test, validate)
         # run: 'npm ci'
