--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,30 +26,33 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '${{ matrix.node-version }}'
+
       - name: Cache node modules
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: v1-npm-deps-${{ hashFiles('**/package-lock.json') }}
           restore-keys: v1-npm-deps-
-      # - name: Checkout repository
-      - uses: actions/checkout@v4
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-        env:
-          COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
-          CHANGED_FILES_LIST: $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
+        # env:
+        #   COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
+        #   CHANGED_FILES_LIST: $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
+
       - name: Get changeset
         run: |
-          echo "CHANGED_FILES<<EOF" >> $GITHUB_ENV
+          echo 'CHANGED_FILES<<EOF' >> $GITHUB_ENV
           $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}) >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
+
       - name: Test1
         run: echo $CHANGED_FILES
       - name: Test2
         run: echo env.CHANGED_FILES
-    #   - name: Test3
-    #     run: env
+
       # - name: Run build (test, validate)
         # run: 'npm ci'
         # run: 'npm run bootstrap && npm run build:ci'
