--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Get changeset
         run: |
           echo 'CHANGED_FILES<<EOF' >> $GITHUB_ENV
-          $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}) >> $GITHUB_ENV
+          sed -e '$a\' $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}) >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
 
       - name: Test1
