--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,16 +42,28 @@ jobs:
         #   COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
         #   CHANGED_FILES_LIST: $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
 
-      - name: Get changeset
-        run: |
-          echo 'CHANGED_FILES<<EOF' >> $GITHUB_ENV
-          $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}) >> $GITHUB_ENV
-        #   echo 'EOF' >> $GITHUB_ENV
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v39
+        with:
+          since_last_remote_commit: true 
 
-      - name: Test1
-        run: echo $CHANGED_FILES
-      - name: Test2
-        run: echo env.CHANGED_FILES
+      - name: List all changed files
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "$file was changed"
+          done
+
+    #   - name: Get changeset
+    #     run: |
+    #       echo 'CHANGED_FILES<<EOF' >> $GITHUB_ENV
+    #       $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}) >> $GITHUB_ENV
+    #       echo 'EOF' >> $GITHUB_ENV
+
+    #   - name: Test1
+    #     run: echo $CHANGED_FILES
+    #   - name: Test2
+    #     run: echo env.CHANGED_FILES
 
       # - name: Run build (test, validate)
         # run: 'npm ci'
