DEBUG: changed files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,6 @@ on:
   pull_request:
     branches:
       - main
-
-# from travis
-# env:
-#   CHANGED_FILES: $(git diff --name-only $TRAVIS_COMMIT_RANGE)
-
 jobs:
   test:
     runs-on: '${{ matrix.os }}'
@@ -19,8 +14,6 @@ jobs:
           - ubuntu-latest
         node-version:
           - 14.x
-    # outputs:
-    #   files_changed: ${{ steps.changed_files.outputs.files_changed }}
     steps:
       - name: 'Set up Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v1
@@ -38,9 +31,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-        # env:
-        #   COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
-        #   CHANGED_FILES_LIST: $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
 
       - name: Get changed files
         id: changed_files
@@ -48,7 +38,7 @@ jobs:
         with:
           since_last_remote_commit: true 
 
-      - name: List all changed files
+      - name: Save changed files to environment variable
         run: |
           csv=""
           for result in ${{ steps.changed_files.outputs.all_changed_files }}; do
@@ -57,18 +47,8 @@ jobs:
           done
           echo "CHANGED_FILES=$csv" >> $GITHUB_ENV
 
-    #   - name: push to env
-    #     run: |
-    #        echo "CHANGED_FILES=${{ steps.changed_files.outputs.all_changed_files }}" >> $GITHUB_ENV
-
-    #   - name: Get changeset
-    #     run: |
-    #       echo 'CHANGED_FILES<<EOF' >> $GITHUB_ENV
-    #       $(git diff --name-only ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}) >> $GITHUB_ENV
-    #       echo 'EOF' >> $GITHUB_ENV
-
       - name: Test1
-        run: echo $CHANGED_FILES
+        run: echo env
     #   - name: Test2
     #     run: echo env.CHANGED_FILES
 
