--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           since_last_remote_commit: true 
 
-      - name: Save changed files to env
+      - name: Export changed files to env
         run: |
           csv=""
           for result in ${{ steps.changed_files.outputs.all_changed_files }}; do
@@ -46,6 +46,12 @@ jobs:
             csv="${csv}${csv:+,}$file"
           done
           echo "CHANGED_FILES=$csv" >> $GITHUB_ENV
+
+      - name: Export npm token to env
+        run: echo "NPM_TOKEN=$secrets.NPM_TOKEN" >> $GITHUB_ENV
+
+      - name: TEST
+        run: env
 
       - name: Install dependencies
         run: 'npm ci'
