Update package.json AND HISTORY at the same time - seems to be required

--- a/toolkits/global/packages/global-customer-satisfaction-input/package.json
+++ b/toolkits/global/packages/global-customer-satisfaction-input/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "license": "MIT",
   "description": "HTML form based component for gathering customer satisfaction data",
-  "keywords": ["survey"],
+  "keywords": ["survey", "customer"],
   "author": "Springer Nature",
   "brandContext": "^32.0.0"
 }
